--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Membuat Rest api catatan sederhana",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
   "author": "",
